add timestamps to reduced list
